--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                   "After my accident, I needed multiple blood transfusions that saved my life. I'm forever grateful to the donors who made my recovery possible."
                 </p>
                 <div class="testimonial-author">
-                  <div class="author-name">Sarah Johnson</div>
+                  <div class="author-name">Arti Chavan</div>
                   <div class="author-title">Transfusion Recipient</div>
                 </div>
               </div>
@@ -202,7 +202,7 @@
                   "I donate blood every 56 days. It's a small gesture that makes a huge difference. Knowing I'm helping others is the best feeling in the world."
                 </p>
                 <div class="testimonial-author">
-                  <div class="author-name">Michael Rodriguez</div>
+                  <div class="author-name">Raju Kulkarni</div>
                   <div class="author-title">Regular Donor</div>
                 </div>
               </div>
